Fixed menu button position on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -104,6 +104,8 @@ a {
     .navbar-burger {
         float: right;
         display: block;
+        top: 50%;
+        transform: translateY(20%);
     }
 
     /* Adapted from W3Schools */
